--- a/vue-learn/vue-cli/vue-elm/src/common/stylus/variable.styl
+++ b/vue-learn/vue-cli/vue-elm/src/common/stylus/variable.styl
@@ -1,5 +1,11 @@
 //定义css变量
 $color-white = #fff
+$color-red = #f01414
+$color-blue = #00a0dc
+$color-light-grey = #999
+$color-dark-grey = #333
+$color-green = #00b43c
+$color-font = #666666
 
 
 $color-background = rgba(7, 17, 27, 1)
@@ -9,6 +15,7 @@ $color-background-sss = rgba(7, 17, 27, .2)
 $color-background-ssss = #f3f5f7
 
 $fontsize-large-xxxx = 30px
+$fontsize-large-xxx = 24px
 $fontsize-large = 16px
 $fontsize-medium =14px
 $fontsize-small = 12px
